Fix logos distorted

--- a/resources/css/site/components/logos.styl
+++ b/resources/css/site/components/logos.styl
@@ -5,7 +5,14 @@
 	align-items center
 
 	.logo
+		width 10rem
+		height 8rem
+		display grid
+		place-items center
+		position relative
+
 		img
-			height 100%
-			max-width $px-160
-			max-height $px-128
+			position absolute
+			max-height 100%
+			height auto
+			width auto
